Fix header z-index.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,6 +41,7 @@ header {
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
+  z-index: 10; 
 }
 
 header .content {
@@ -115,7 +116,7 @@ header .mobile {
 .banner {
   background-image: url(../images/banner-landingpage.jpg);
   background-position: center;
-  background-size: cover; 
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
